Add ingredients to teriyaki

--- a/recipes/teriyaki-meatballs.html
+++ b/recipes/teriyaki-meatballs.html
@@ -7,5 +7,34 @@
 
     <body>
         <h1>Teriyaki Meatballs</h1>
+        <img
+            src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fd8ccc1cd4236d32176d7a3b4bf133d22%2F1661522375Teriyaki%20Meatballs.jpeg&w=595&h=398&c=sc&poi=face&q=60&orient=true"
+            alt="Teriyaki meatballs covered with sauce on a yellow plate."
+        >
+        <h2>Description</h2>
+        <p>An easy and delicious twist on meatballs! These teriyaki meatballs can be served over rice, or pasta, or even a chewy French bread roll for sub sandwiches.</p>
+
+        <h2>Ingredients</h2>
+
+        <h3>Meatballs</h3>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>1/4 cup bread crumbs</li>
+            <li>3 tablespoons soy sauce</li>
+            <li>2 tablespoons brown sugar</li>
+            <li>2 tablespoons garlic, minced</li>
+            <li>2 large egg whites</li>
+        </ul>
+
+        <h3>Sauce</h3>
+        <ul>
+            <li>1 (15 ounce) can crushed pineapple</li>
+            <li>1/2 cup soy sauce</li>
+            <li>1/4 cup brown sugar</li>
+            <li>1 pinch garlic salt, or to taste</li>
+            <li>2 tablespoons cornstarch</li>
+            <li>1/2 cup cold water</li>
+        </ul>
+
     </body>
 </html>
