--- a/recipes/teriyaki-meatballs.html
+++ b/recipes/teriyaki-meatballs.html
@@ -36,5 +36,14 @@
             <li>1/2 cup cold water</li>
         </ul>
 
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Line a baking sheet with foil.</li>
+            <li>Mix ground beef, bread crumbs, soy sauce, brown sugar, garlic, and egg whites for meatballs together in a bowl until well combined. Form into 1-ounce balls. Transfer to the prepared baking sheet.</li>
+            <li>Bake in the preheated oven for 25 minutes. An instant-read thermometer inserted into the center should read at least 160 degrees F (71 degrees C).</li>
+            <li>Meanwhile prepare sauce: Combine pineapple, soy sauce, brown sugar, and pepper in a saucepan over medium heat. Bring to boil, then reduce to a simmer.</li>
+            <li>Mix cold water and cornstarch together in a small bowl; add to the sauce. Stir and simmer until desired thickness, 3 to 5 minutes. Add meatballs and cook until heated through, about 5 minutes.</li>
+        </ol>
+
     </body>
 </html>
